完善後台管理員功能

--- a/temp_admin/ogs-admin-manager-detail-tpl.html
+++ b/temp_admin/ogs-admin-manager-detail-tpl.html
@@ -37,7 +37,9 @@
 			</td>
 			<th>關閉帳號</th>
 			<td>
+				<!-- START BLOCK : TAG_MANAGE_BAN_BTN -->
 				<input type="button" class="goto" name="ban" value="封鎖此管理員" rel="{TAG_MANAGE_PATH}manager/ban/{VALUE_ID}/">
+				<!-- END BLOCK : TAG_MANAGE_BAN_BTN -->
 			</td>
 		</tr>
 	</table>
