增加後台介紹頁語系同步儲存功能

--- a/temp_admin/ogs-admin-intro-modify-tpl.html
+++ b/temp_admin/ogs-admin-intro-modify-tpl.html
@@ -43,6 +43,7 @@
 	</div>
 
 	<input type="submit" name="send" value="修改">
+	<input type="button" name="multiBtn" value="各語系同步修改">
 	<input type="button" class="goto" name="back" value="回到列表" rel="{VALUE_BACK_LINK}">
 	<input type="hidden" name="callback" value="1">
 	<input type="hidden" name="id" value="{VALUE_ID}">
