--- a/temp_admin/ogs-admin-footer-tpl.html
+++ b/temp_admin/ogs-admin-footer-tpl.html
@@ -1,3 +1,3 @@
 <footer>
-	<p>&copy; <a class="no-brackets_all span" href="mailto:potsonhumer@gmail.com" target="_blank">Potson Humer</a> 2015.</p>
+	<p>&copy; <a class="no-brackets_all span" href="http://www.icisco.cc/" target="_blank">ICISCO</a> | <a class="no-brackets_all span" href="mailto:potsonhumer@gmail.com" target="_blank">Potson Humer</a> 2016.</p>
 </footer>
