--- a/temp_admin/ogs-admin-nav-tpl.html
+++ b/temp_admin/ogs-admin-nav-tpl.html
@@ -64,6 +64,7 @@
 		<li {NAV_LEVEL_CONTACT}>
 			<label class="icon-bell">聯絡我們管理</label>
 			<ul class="animate">
+				<li><a {CURRENT_NAV_CONTACT_SUBJECT} href="{TAG_MANAGE_PATH}contact/subject/">主題設定</a></li>
 				<li><a {CURRENT_NAV_CONTACT} href="{TAG_MANAGE_PATH}contact/">留言列表</a></li>
 			</ul>
 		</li>
