--- a/temp_admin/ogs-admin-header-tpl.html
+++ b/temp_admin/ogs-admin-header-tpl.html
@@ -7,7 +7,7 @@
 		<meta name="author" content="Potson Humer" />
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=1">
-		<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
 		<script type="text/javascript" src="{TAG_JS_PATH}box_serial/tiny_box.js"></script>
