增加後台部落格功能

--- a/temp_admin/ogs-admin-nav-tpl.html
+++ b/temp_admin/ogs-admin-nav-tpl.html
@@ -42,6 +42,13 @@
 				<li><a {CURRENT_NAV_NEWS} href="{TAG_MANAGE_PATH}news/">最新消息列表</a></li>
 			</ul>
 		</li>
+		<li {NAV_LEVEL_BLOG}>
+			<label class="icon-signal">部落格管理</label>
+			<ul class="animate">
+				<li><a {CURRENT_NAV_BLOG_CATE} href="{TAG_MANAGE_PATH}blog/cate/">分類列表</a></li>
+				<li><a {CURRENT_NAV_BLOG} href="{TAG_MANAGE_PATH}blog/">部落格列表</a></li>
+			</ul>
+		</li>
 		<li {NAV_LEVEL_PRODUCTS}>
 			<label class="icon-folder">產品管理</label>
 			<ul class="animate">
