後台主選單電腦版直接顯示選單

--- a/temp_admin/ogs-admin-nav-tpl.html
+++ b/temp_admin/ogs-admin-nav-tpl.html
@@ -1,4 +1,4 @@
-<nav class="animate">
+<nav class="animate {TAG_PC}">
 	<h2 style="margin-left: 0;">功能選單</h2>
 	<ul {NAV_LEVEL_NULL}>
 		<li {NAV_LEVEL_SYSTEM}>
