--- a/temp_admin/ogs-admin-top-tpl.html
+++ b/temp_admin/ogs-admin-top-tpl.html
@@ -8,7 +8,7 @@
 			</select>
 		</li>
 		<li class="span"> </li>
-		<li><a id="nav_menu" class="no-brackets icon-menu" href="#">功能選單</a></li>
+		<li><a id="nav_menu" class="no-brackets icon-menu {TAG_PC}" href="#">功能選單</a></li>
 		<li><a class="no-brackets icon-anchor" href="{TAG_MANAGE_PATH}">後台首頁</a></li>
 		<li><a class="no-brackets icon-monitor" href="{TAG_ROOT_PATH}" target="_blank">前台首頁</a></li>
 		<li><a class="no-brackets icon-power" href="{TAG_MANAGE_PATH}manager/logout/">登出</a></li>
