--- a/temp_admin/ogs-admin-contact-subject-tpl.html
+++ b/temp_admin/ogs-admin-contact-subject-tpl.html
@@ -5,6 +5,7 @@
 		<tr>
 			<th>排序</th>
 			<th>主題名稱</th>
+			<th>管理員 E-mail</th>
 			<th>刪除</th>
 		</tr>
 		<!-- START BLOCK : TAG_CONTACT_SUBJECT_LIST -->
@@ -14,6 +15,9 @@
 			</td>
 			<td class="center">
 				<input type="text" name="subject[]" value="{VALUE_SUBJECT}" size="200">
+			</td>
+			<td class="center">
+				<input type="email" name="email[]" value="{VALUE_EMAIL}" placeholder="系統會將聯絡我們來函發送至此設定 e-mail，未填入則以 '系統設定' E-mail 為主。" size="500">
 			</td>
 			<td class="center">
 				<input type="hidden" name="id[]" value="{VALUE_ID}" size="50">
@@ -34,6 +38,7 @@
 		<tr>
 			<th>排序</th>
 			<th>主題名稱</th>
+			<th>管理員 E-mail</th>
 		</tr>
 		<tr>
 			<td class="center">
@@ -41,6 +46,9 @@
 			</td>
 			<td class="center">
 				<input type="text" name="subject" value="{ADD_SUBJECT}" placeholder="新增主題" size="200">
+			</td>
+			<td class="center">
+				<input type="email" name="email" value="{VALUE_EMAIL}" placeholder="系統會將聯絡我們來函發送至此設定 e-mail，未填入則以 '系統設定' E-mail 為主。" size="500">
 			</td>
 		</tr>
 	</table>
