預設讀取畫面

--- a/temp_cht/ogs-fn-main-tpl.html
+++ b/temp_cht/ogs-fn-main-tpl.html
@@ -4,6 +4,9 @@
 	<!-- INCLUDE BLOCK : HEADER -->
 
 	<body>
+
+		{TAG_LOAD_SCREEN_HTML}
+
 		<div id="wp">
 
 			<!-- INCLUDE BLOCK : TOP -->
@@ -37,5 +40,8 @@
 			<!-- INCLUDE BLOCK : FOOTER -->
 			
 		</div>
+
+		{TAG_LOAD_SCREEN_JS}
+
 	</body>
 </html>
