--- a/temp_cht/ogs-index-tpl.html
+++ b/temp_cht/ogs-index-tpl.html
@@ -4,11 +4,17 @@
 	</head>
 
 	<body>
+
+		{TAG_LOAD_SCREEN_HTML}
+
 		<h1>OGS V2</h1>
 		<content>
 			TEST!
 			
 		</content>
+
+		{TAG_LOAD_SCREEN_JS}
+
 	</body>
 
 </html>
