--- a/temp_cht/ogs-fn-header-tpl.html
+++ b/temp_cht/ogs-fn-header-tpl.html
@@ -7,6 +7,8 @@
 		<meta name="keywords" content="{SEO_KEYWORDS}" />
 		<meta name="description" content="{SEO_DESCRIPTION}" />
 
+		{TAG_LOAD_SCREEN_CSS}
+
 		<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
