--- a/temp_cht/ogs-fn-header-tpl.html
+++ b/temp_cht/ogs-fn-header-tpl.html
@@ -9,7 +9,7 @@
 
 		{TAG_LOAD_SCREEN_CSS}
 
-		<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
 
 		{TAG_CSS_INCLUDE}
