修改預設 index head 樣板

--- a/temp_cht/ogs-fn-index-header-tpl.html
+++ b/temp_cht/ogs-fn-index-header-tpl.html
@@ -9,12 +9,8 @@
 
 		{TAG_LOAD_SCREEN_CSS}
 
-		<script src="//code.jquery.com/jquery-1.11.2.min.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.3/jquery-ui.min.js"></script>
-
-		<script type="text/javascript" src="{TAG_JS_PATH}box_serial/marquee_box.js"></script>
-		<script type="text/javascript" src="{TAG_JS_PATH}simplefoucs.js"></script>
-		<script type="text/javascript" src="{TAG_JS_PATH}yatai_JQ.js"></script>
 
 		{TAG_CSS_INCLUDE}
 		{TAG_JS_BOX}
