修正預設載入資源

--- a/temp_cht/ogs-fn-main-tpl.html
+++ b/temp_cht/ogs-fn-main-tpl.html
@@ -41,6 +41,11 @@
 			
 		</div>
 
+		{TAG_CSS_FOOTER}
+		{TAG_JS_FOOTER}
+		{TAG_BOX_FOOTER}
+		{TAG_CUSTOM_FOOTER}
+
 		{TAG_LOAD_SCREEN_JS}
 
 	</body>
