--- a/temp_cht/ogs-index-tpl.html
+++ b/temp_cht/ogs-index-tpl.html
@@ -1,7 +1,5 @@
 <html>
-	<head>
-		<title>OSG V2</title>
-	</head>
+	<!-- INCLUDE BLOCK : INDEX_HEADER -->
 
 	<body>
 
@@ -12,6 +10,11 @@
 			TEST!
 			
 		</content>
+
+		{TAG_CSS_FOOTER}
+		{TAG_JS_FOOTER}
+		{TAG_BOX_FOOTER}
+		{TAG_CUSTOM_FOOTER}
 
 		{TAG_LOAD_SCREEN_JS}
 
