修正產品關聯搜尋顯示中文未解碼問題

--- a/temp_admin/ogs-admin-products-modify-tpl.html
+++ b/temp_admin/ogs-admin-products-modify-tpl.html
@@ -189,7 +189,7 @@
 	var seekRS = function(OBJ){
 		return '<tr>'+
 			'<td><input type="checkbox" name="related[]" value="'+ OBJ.id +'"></td>'+
-			'<td>'+ OBJ.subject +'</td>'+
+			'<td>'+ decodeURIComponent(OBJ.subject) +'</td>'+
 			'<td>'+ OBJ.image +'</td>'+
 			'<td><a href="'+ OBJ.link +'" target="_blank">查看產品</a></td>'+
 		'</tr>'
