增加 gallery 功能 (後台完成)

--- a/temp_admin/ogs-admin-nav-tpl.html
+++ b/temp_admin/ogs-admin-nav-tpl.html
@@ -23,13 +23,13 @@
 			</ul>
 		</li>
 		<li {NAV_LEVEL_INTRO}>
-			<label class="icon-paragraph">介紹頁管理</label>
+			<label class="icon-paragraph">介紹頁管理<br />(關於 JR)</label>
 			<ul class="animate">
 				<li><a {CURRENT_NAV_INTRO} href="{TAG_MANAGE_PATH}intro/">介紹頁列表</a></li>
 			</ul>
 		</li>
 		<li {NAV_LEVEL_FAQ}>
-			<label class="icon-speech-bubble">問與答管理</label>
+			<label class="icon-speech-bubble">問與答管理<br />(常見問題)</label>
 			<ul class="animate">
 				<li><a {CURRENT_NAV_FAQ_CATE} href="{TAG_MANAGE_PATH}faq/cate/">分類列表</a></li>
 				<li><a {CURRENT_NAV_FAQ} href="{TAG_MANAGE_PATH}faq/">問與答列表</a></li>
@@ -42,8 +42,15 @@
 				<li><a {CURRENT_NAV_NEWS} href="{TAG_MANAGE_PATH}news/">最新消息列表</a></li>
 			</ul>
 		</li>
+		<li {NAV_LEVEL_GALLERY}>
+			<label class="icon-image">相簿管理<br />(作品欣賞)</label>
+			<ul class="animate">
+				<li><a {CURRENT_NAV_GALLERY_CATE} href="{TAG_MANAGE_PATH}gallery/cate/">分類列表</a></li>
+				<li><a {CURRENT_NAV_GALLERY} href="{TAG_MANAGE_PATH}gallery/">相簿列表</a></li>
+			</ul>
+		</li>
 		<li {NAV_LEVEL_BLOG}>
-			<label class="icon-signal">部落格管理</label>
+			<label class="icon-book">部落格管理<br />(美學講堂)</label>
 			<ul class="animate">
 				<li><a {CURRENT_NAV_BLOG_CATE} href="{TAG_MANAGE_PATH}blog/cate/">分類列表</a></li>
 				<li><a {CURRENT_NAV_BLOG} href="{TAG_MANAGE_PATH}blog/">部落格列表</a></li>
