後台產品列表名稱連結前台畫面

--- a/temp_admin/ogs-admin-products-list-tpl.html
+++ b/temp_admin/ogs-admin-products-list-tpl.html
@@ -52,7 +52,7 @@
 			</td>
 			<td class="center">{VALUE_PARENT}</td>
 			<td class="center"><img src="{VALUE_IMAGE}" style="max-height: 50px; max-width: 100px;"></td>
-			<td class="center">{VALUE_SUBJECT}</td>
+			<td class="center"><a href="{VALUE_LINK}" target="_blank">{VALUE_SUBJECT}</a></td>
 			<td class="center {CLASS_STATUS_RED}">{VALUE_STATUS}</td>
 			<td class="center">
 				<input type="button" class="goto" name="modify" value="管理" rel="{TAG_MANAGE_PATH}products/detail/{VALUE_ID}/">
