ga 功能 & head 修正

--- a/temp_admin/ogs-admin-system-tpl.html
+++ b/temp_admin/ogs-admin-system-tpl.html
@@ -23,6 +23,12 @@
 				<input type="text" name="email" value="{VALUE_EMAIL}" size="300" placeholder="發送 詢價、購物、關於我們 E-mail">
 			</td>
 		</tr>
+		<tr>
+			<th>GA 追蹤編號</th>
+			<td>
+				<input type="text" name="ga" value="{VALUE_GA}" size="100">
+			</td>
+		</tr>
 	</table>
 
 	<input type="hidden" name="callback" value="1">
