--- a/temp_cht/ogs-fn-header-tpl.html
+++ b/temp_cht/ogs-fn-header-tpl.html
@@ -1,7 +1,7 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-		<link href="{TAG_CSS_PATH}style.css" type="text/css" rel="stylesheet" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=0">
 
 		<title>{SEO_TITLE}</title>
 		<meta name="keywords" content="{SEO_KEYWORDS}" />
@@ -21,4 +21,6 @@
 		<link rel="shortcut icon" href="/favicon.ico" />
 		<link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 		-->
+
+		{TAG_GA}
 	</head>
