news 可自動判斷有無分類

--- a/temp_admin/ogs-admin-news-insert-tpl.html
+++ b/temp_admin/ogs-admin-news-insert-tpl.html
@@ -14,7 +14,7 @@
 				<th>※ 所屬分類</th>
 				<td>
 					<select name="parent">
-						<option value="0">未選擇</option>
+						<option value="{VALUE_PARENT_OPTION_DEFAULT_VAR}">{VALUE_PARENT_OPTION_DEFAULT_STR}</option>
 						{VALUE_PARENT_OPTION}
 					</select>
 				</td>
