--- a/temp_admin/ogs-admin-nav-tpl.html
+++ b/temp_admin/ogs-admin-nav-tpl.html
@@ -38,7 +38,7 @@
 		<li {NAV_LEVEL_NEWS}>
 			<label class="icon-signal">最新消息管理</label>
 			<ul class="animate">
-				<li><a {CURRENT_NAV_NEWS_CATE} href="{TAG_MANAGE_PATH}news/cate/">分類列表</a></li>
+				<!-- <li><a {CURRENT_NAV_NEWS_CATE} href="{TAG_MANAGE_PATH}news/cate/">分類列表</a></li> -->
 				<li><a {CURRENT_NAV_NEWS} href="{TAG_MANAGE_PATH}news/">最新消息列表</a></li>
 			</ul>
 		</li>
