404 內文可後台編輯

--- a/temp_admin/ogs-admin-system-tpl.html
+++ b/temp_admin/ogs-admin-system-tpl.html
@@ -29,6 +29,12 @@
 				<input type="text" name="ga" value="{VALUE_GA}" size="100">
 			</td>
 		</tr>
+		<tr>
+			<th>404 內容</th>
+			<td>
+				<textarea class="tiny" name="notfound">{VALUE_NOTFOUND}</textarea>
+			</td>
+		</tr>
 	</table>
 
 	<input type="hidden" name="callback" value="1">
