ga 欄位加上範例

--- a/temp_admin/ogs-admin-system-tpl.html
+++ b/temp_admin/ogs-admin-system-tpl.html
@@ -26,7 +26,7 @@
 		<tr>
 			<th>GA 追蹤編號</th>
 			<td>
-				<input type="text" name="ga" value="{VALUE_GA}" size="100">
+				<input type="text" name="ga" value="{VALUE_GA}" size="150" placeholder="例：UA-60141941-1">
 			</td>
 		</tr>
 		<tr>
