--- a/temp_cht/ogs-fn-ga-tpl.html
+++ b/temp_cht/ogs-fn-ga-tpl.html
@@ -5,5 +5,6 @@
 	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
 	ga('create', '{SYSTEM_GA}', 'auto');
+	ga('require', 'displayfeatures');
 	ga('send', 'pageview');
 </script>
