表單送出感謝頁面

--- a/temp_admin/ogs-admin-system-tpl.html
+++ b/temp_admin/ogs-admin-system-tpl.html
@@ -30,6 +30,13 @@
 			</td>
 		</tr>
 		<tr>
+			<th>表單送出畫面</th>
+			<td>
+				<textarea class="tiny" name="response">{VALUE_RESPONSE}</textarea>
+				<p class="red">內文請一定要下 &#123;TAG_MSG&#125; 標記，此標記用於程式替換 系統顯示文字 位置</p>
+			</td>
+		</tr>
+		<tr>
 			<th>404 內容</th>
 			<td>
 				<textarea class="tiny" name="notfound">{VALUE_NOTFOUND}</textarea>
