--- a/temp_admin/ogs-admin-system-tpl.html
+++ b/temp_admin/ogs-admin-system-tpl.html
@@ -24,6 +24,20 @@
 			</td>
 		</tr>
 		<tr>
+
+		<tr>
+			<th>Google 驗證器公開金鑰<br />(Site key)</th>
+			<td>
+				<input type="text" name="reCAPTCHAkey" value="{VALUE_RECAPTCHAKEY}" size="500">
+			</td>
+		</tr>
+		<tr>
+			<th>Google 驗證器秘密金鑰<br />(Secret key)</th>
+			<td>
+				<input type="text" name="reCAPTCHAsecret" value="{VALUE_RECAPTCHASECRET}" size="500">
+			</td>
+		</tr>
+		<tr>
 			<th>GA 追蹤編號</th>
 			<td>
 				<input type="text" name="ga" value="{VALUE_GA}" size="150" placeholder="例：UA-60141941-1">
