增加後台分店資訊設定

--- a/temp_admin/ogs-admin-system-seo-tpl.html
+++ b/temp_admin/ogs-admin-system-seo-tpl.html
@@ -4,6 +4,7 @@
 	<ul>
 		<li><label>設定項目</label></li>
 		<li><a href="{TAG_MANAGE_PATH}system/">基本設定</a></li>
+		<!-- <li><a href="{TAG_MANAGE_PATH}system/custom/">分店資訊設定</a></li> -->
 		<li><a href="{TAG_MANAGE_PATH}system/seo/" class="theme">各功能主頁 SEO 設定</a></li>
 	</ul>
 </div>
