轉址功能後台主選單連結

--- a/temp_admin/ogs-admin-nav-tpl.html
+++ b/temp_admin/ogs-admin-nav-tpl.html
@@ -5,6 +5,7 @@
 			<label class="icon-cog">基本設定</label>
 			<ul class="animate">
 				<li><a {CURRENT_NAV_SYSTEM} href="{TAG_MANAGE_PATH}system/">系統設定</a></li>
+				<li><a {CURRENT_NAV_SYSTEM_REWRITE} href="{TAG_MANAGE_PATH}rewrite/">轉址設定</a></li>
 				<li><a class="file_manage" href="#">檔案管理</a></li>
 			</ul>
 		</li>
