網頁檔名 改 自訂網址

--- a/temp_admin/ogs-admin-seo-tpl.html
+++ b/temp_admin/ogs-admin-seo-tpl.html
@@ -1,6 +1,6 @@
 <table>
 	<tr>
-		<th>網頁檔名</th>
+		<th>自訂網址</th>
 		<td>
 			<input type="text" name="filename" value="{SEO_FILENAME}" size="200">
 		</td>
