增加系統 logo & 電話資訊

--- a/temp_admin/ogs-admin-system-tpl.html
+++ b/temp_admin/ogs-admin-system-tpl.html
@@ -18,6 +18,18 @@
 			</td>
 		</tr>
 		<tr>
+			<th>logo 圖片</th>
+			<td>
+				<input type="text" name="logo" value="{VALUE_LOGO}" size="300" placeholder="建議使用 SVG 圖檔"> <input type="button" class="img_manage" value="選取圖片">
+			</td>
+		</tr>
+		<tr>
+			<th>系統電話</th>
+			<td>
+				<input type="text" name="tel" value="{VALUE_TEL}" size="300" placeholder="顯示於頁尾或聯絡我們">
+			</td>
+		</tr>		
+		<tr>
 			<th>系統 E-mail</th>
 			<td>
 				<input type="text" name="email" value="{VALUE_EMAIL}" size="300" placeholder="發送 詢價、購物、關於我們 E-mail">
