--- a/temp_cht/ogs-member-login-tpl.html
+++ b/temp_cht/ogs-member-login-tpl.html
@@ -1,7 +1,6 @@
 	<div id="main_box">
 		<div class="main ot">
 			<div id="login">
-				<img src="{TAG_THEME_PATH}login.png" width="260" height="130" border="0"/>
 				<form action="{TAG_ROOT_PATH}member/login/" method="post">
 					<input type="text" name="account" placeholder="管理者帳號" /><br />
 					<input type="password" name="password" placeholder="管理者密碼" /><br />
@@ -9,7 +8,7 @@
 
 					<br /><br />
 					<a href="{TAG_ROOT_PATH}member/forget/">忘記密碼?</a>
-					<!--<a href="{TAG_ROOT_PATH}member/regist/">註冊會員</a>-->
+					<a href="{TAG_ROOT_PATH}member/regist/">註冊會員</a>
 				</form>
 			</div>
 		</div>
