--- a/temp_admin/ogs-admin-gallery-insert-tpl.html
+++ b/temp_admin/ogs-admin-gallery-insert-tpl.html
@@ -45,6 +45,10 @@
 				</td>
 			</tr>
 			<tr>
+				<th>圖檔列表</th>
+				<td id="imageList" colspan="3">請先於上方寫入目錄位置</td>
+			</tr>
+			<tr>
 				<th>※ 內容</th>
 				<td colspan="3">
 					<textarea class="tiny" name="content">{VALUE_CONTENT}</textarea>
@@ -67,6 +71,27 @@
 		$(document).tab_box({
 			TITLE : false, //自動生成頁籤 , true => 啟動 , false => 停用
 			AFTER :  function() {  }, // 動作後執行擴充			
+		});
+
+		$('input[name=dirpath]').keyup(function(){
+			var word = $(this).val();
+
+			$(document).get_box({
+				CLICK : false, // 按鍵後才啟動功能 , true => 按鍵啟動  , false => 直接啟動
+				CALL : word, // key 值
+				PHP : "{TAG_MANAGE_PATH}gallery/images/", // 取值目標
+				FUNC : "", // func 附值
+				AFTER : function() {  }, // 動作後執行擴充
+			}, function(DATA){
+				//callback
+				if(isset(DATA) && DATA != 'NONE'){
+					$('#imageList').html('').append(DATA);
+					pixels_size();
+					images_cancel();
+				}else{
+					$('#imageList').html('請先於上方寫入目錄位置');
+				}
+			});
 		});
 	});
 </script>
