--- a/temp_admin/ogs-admin-gallery-modify-tpl.html
+++ b/temp_admin/ogs-admin-gallery-modify-tpl.html
@@ -5,6 +5,7 @@
 <form action="{TAG_MANAGE_PATH}gallery/modify/" method="post">
 	<ul id="cate">
 		<li><a class="tab_title">相簿設定</a></li>
+		<li><a class="tab_title">關聯相簿</a></li>
 		<li><a class="tab_title">SEO 設定</a></li>
 	</ul>
 
@@ -64,6 +65,43 @@
 	</div>
 
 	<div class="tab">
+		<!-- START BLOCK : TAG_RELATED_BLOCK -->
+		<hr />
+		<h2>已經關聯的相簿</h2>
+		<table>
+			<tr>
+				<th>選擇</th>
+				<th>相簿名稱</th>
+				<th>封面</th>
+				<th>連結</th>
+			</tr>
+			<!-- START BLOCK : TAG_RELATED_LIST -->
+			<tr>
+				<td><input type="checkbox" name="related[]" value="{VALUE_ID}" checked></td>
+				<td>{VALUE_SUBJECT}</td>
+				<td><img src="{VALUE_IMAGE}" style="width: 100px;"></td>
+				<td><a href="{VALUE_LINK}" target="_blank">查看產品</a></td>
+			</tr>
+			<!-- END BLOCK : TAG_RELATED_LIST -->
+		</table>
+		<hr />
+		<!-- END BLOCK : TAG_RELATED_BLOCK -->
+
+		<table>
+			<tr>
+				<th>搜尋相簿</th>
+				<td>
+					<input type="text" name="related_seek" size="200">
+					<p>輸入相簿的名稱進行搜尋</p>
+				</td>
+			</tr>
+		</table>
+
+		<div id="seekRs">
+		</div>
+	</div>
+
+	<div class="tab">
 		<!-- INCLUDE BLOCK : SEO -->
 	</div>
 
@@ -114,6 +152,66 @@
 					$('#imageList').html('請先於上方寫入目錄位置');
 				}
 			});
+		});
+	});
+
+	/* -- */
+
+	var seekTable = function(){
+		return '<hr />'+
+		'<h2>搜尋結果</h2>'+
+		'<table id="seekTable">'+
+			'<tr>'+
+				'<th>選擇</th>'+
+				'<th>相簿名稱</th>'+
+				'<th>封面</th>'+
+				'<th>連結</th>'+
+			'</tr>'+
+		'</table>'+
+		'<hr />'
+	}
+
+	var seekRS = function(OBJ){
+		return '<tr>'+
+			'<td><input type="checkbox" name="related[]" value="'+ OBJ.id +'"></td>'+
+			'<td>'+ decodeURIComponent(OBJ.subject) +'</td>'+
+			'<td>'+ OBJ.image +'</td>'+
+			'<td><a href="'+ OBJ.link +'" target="_blank">查看相簿</a></td>'+
+		'</tr>'
+	}
+
+	$(function(){
+		$(document).tab_box({
+			TITLE : false, //自動生成頁籤 , true => 啟動 , false => 停用
+			AFTER :  function() {  }, // 動作後執行擴充			
+		});
+
+		$("input[name=related_seek]").keyup(function(){
+			var STR = $(this).val();
+			if(isset(STR)){
+				$(document).get_box({
+					CLICK : false, // 按鍵後才啟動功能 , true => 按鍵啟動  , false => 直接啟動
+					CALL : STR, // key 值
+					PHP : "{TAG_MANAGE_PATH}gallery/seek/{VALUE_ID}", // 取值目標
+					FUNC : "", // func 附值
+					AFTER : function() {  }, // 動作後執行擴充
+				}, function(DATA){
+					//callback
+					//var SEEK = encodeURIComponent(DATA);
+					$("#seekRs").html("");
+
+					if(DATA != 'NONE'){
+						$("#seekRs").append(seekTable);
+
+						var seekOBJ = JSON.parse(DATA);
+						$.each(seekOBJ,function(KEY,VAL){
+							$("#seekTable").append(seekRS(VAL));
+						});
+					}else{
+						$("#seekRs").append('<hr /><h2>搜尋結果</h2>查無相簿<hr />');
+					}
+				});
+			}
 		});
 	});
 </script>
