--- a/temp_cht/ogs-fn-index-header-tpl.html
+++ b/temp_cht/ogs-fn-index-header-tpl.html
@@ -1,4 +1,4 @@
-	<head>
+	<head {SHARE_PREFIX}>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3.0, user-scalable=0">
@@ -6,6 +6,7 @@
 		<title>{SEO_TITLE}</title>
 		<meta name="keywords" content="{SEO_KEYWORDS}" />
 		<meta name="description" content="{SEO_DESCRIPTION}" />
+		{SHARE_META}
 
 		{TAG_LOAD_SCREEN_CSS}
 
